--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -1,3 +1,4 @@
+<!-- desktop -->
 <div class="set-12" *ngIf="!isMobile" [class.fixdesk]="!isMobile">
   <img src="../../../assets/images/mexicolectivo-small-blue.png" alt="Mexicolectivo">
   <p><small>Todos los derechos reservados. &copy; Pando Servicios Digitales</small></p>
@@ -15,10 +16,13 @@
       <a class="icon facebook-net" target="_blank" href="https://www.facebook.com/mexicolectivo"></a>
       <a class="icon linkedin-net" target="_blank" href="https://www.linkedin.com/company/mexicolectivo/"></a>
       <a class="icon instagram-net" target="_blank" href="https://www.instagram.com/mexicolectivo/"></a>
+      <a class="icon twitter-net" target="_blank" href="https://twitter.com/mexicolectivo"></a>
+      <a class="icon tiktok-net" target="_blank" href="https://www.tiktok.com/@mexicolectivo"></a>
     </div>
   </div>
 </div>
 
+<!-- mobile -->
 <div class="set-12" *ngIf="isMobile" [class.fixmobile]="isMobile">
   <img src="../../../assets/images/mexicolectivo-small-blue.png" alt="Mexicolectivo">
   <p><small>Todos los derechos reservados. &copy; Pando Servicios Digitales</small></p>
@@ -40,6 +44,8 @@
       <a class="icon facebook-net" target="_blank" href="https://www.facebook.com/mexicolectivo"></a>
       <a class="icon linkedin-net" target="_blank" href="https://www.linkedin.com/company/mexicolectivo/"></a>
       <a class="icon instagram-net" target="_blank" href="https://www.instagram.com/mexicolectivo/"></a>
+      <a class="icon twitter-net" target="_blank" href="https://twitter.com/mexicolectivo"></a>
+      <a class="icon tiktok-net" target="_blank" href="https://www.tiktok.com/@mexicolectivo"></a>
     </div>
   </div>
 </div>
