--- a/src/app/components/slider-images/slider-images.component.scss
+++ b/src/app/components/slider-images/slider-images.component.scss
@@ -21,6 +21,7 @@
       overflow-x: scroll;
       width: 100%;
       //   max-width: 1000px;
+      overflow: hidden;
 
       .item {
         width: 100%;
