--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
 <div class="set-12 page" *ngIf="isDataAvailable" [class.fixmobile]="isMobile">
   <div class="set-12 innerpage">
     <div class="set-12 sliderhldr">
-      <div class="set-8 slider">
+      <div class="set-9 slider">
         <div class="set-12 slide" [class.active]="activeIndex == 0">
           <div class="set-12">
             <span class="txt70">somos</span> una plataforma para recoger e intercambiar <span class="txt70">ideas</span>
@@ -36,7 +36,7 @@
         </div>
       </div>
 
-      <div class="set-4">
+      <div class="set-3">
         <button type="button" (click)="linkMe('/documentos-publicos/' + document._id)">
           <p>¡quiero participar!</p>
           <p>click aquí</p>
@@ -55,190 +55,9 @@
   </div>
 
   <div class="set-12 videohldr">
-    &nbsp;
-    <iframe width="854" height="480" src="https://www.youtube.com/embed/3abjA6X8agw" frameborder="0" allowfullscreen></iframe>
+    <iframe width="854" height="480" src="https://www.youtube.com/embed/3abjA6X8agw" frameborder="0"
+      allowfullscreen></iframe>
   </div>
-
-
-
-  <!-- <div class="set-12 mb-page">
-    <p class="set-12">
-      Mexicolectivo surge como una plataforma para recoger e intercambiar ideas, soluciones y diagnósticos, entre la
-      ciudadanía y la sociedad civil organizada experta para incidir en la agenda pública.
-    </p>
-  </div>
-
-  <div class="set-12 mb-page">
-    <div class="set-12 row">
-      <div class="icon">
-        <img src="../../assets/images/cover-icon-01.png" alt="">
-      </div>
-      <div class="txt">
-        Visita la plataforma y conoce más de este ejercicio digital de participación social
-      </div>
-    </div>
-
-    <div class="set-12 row">
-      <div class="icon">
-        <img src="../../assets/images/cover-icon-02.png" alt="">
-      </div>
-      <div class="txt">
-        Aporta contenido en las distintas secciones
-      </div>
-    </div>
-
-    <div class="set-12 row">
-      <div class="icon">
-        <img src="../../assets/images/cover-icon-03.png" alt="">
-      </div>
-      <div class="txt">
-        Visibiliza alguna problemática en tu comunidad
-      </div>
-    </div>
-
-    <div class="set-12 row">
-      <div class="icon">
-        <img src="../../assets/images/cover-icon-04.png" alt="">
-      </div>
-      <div class="txt">
-        Plantea una solución para resolver un problema que afecte a la ciudadanía
-      </div>
-    </div>
-  </div>
-
-  <div class="set-12 mb-page">
-    <video src=""></video>
-  </div>
-
-  <div class="set-12 mb-page">
-    <p>Buscamos detonar un pensamiento colectivo ciudadano que con cada comentario y aportación, logre dar voz
-      constructiva para una sociedad más justa, incluyente, próspera y en paz; rumbo a un México de iguales.
-    </p>
-  </div>
-
-  <div class="set-12 mb-page">
-    <div class="mb-inner">
-      <h3 id="quienesSomos">¿Quienes somos?</h3>
-      <p>Una colectiva plural, abierta y propositiva.</p>
-      <p>Una colectiva que privilegia el proyecto antes que las personas.</p>
-      <p>Una colectiva que SÍ busca incidir en la agenda pública y política en el marco de la coyuntura electoral del
-        2024.</p>
-      <p>Una plataforma participativa transparente con datos abiertos para la ciudadanía.</p>
-    </div>
-  </div>
-
-  <div class="set-12 mb-page">
-    <h3>Misión</h3>
-    <p>
-      Estás a unos pasos de involucrarte con México desde una nueva trinchera, ésta aventura busca que mejoremos, desde
-      cualquier trinchera social : la familia, la amistad, el trabajo. la vecindad, la escuela. el activismo o la
-      comunidad. Somos muchos Méxicos vinculados por los derechos, las causas, las libertades, la solidaridad pero sobre
-      todo por el amor y la confianza en que un mejor país es posible.
-    </p>
-  </div>
-
-  <div class="set-12 mb-page">
-    <h3>Visión</h3>
-    <p>
-      Una ciudadanía permanente es una ciudadanía que participa más allá del voto informado. Es una ciudadanía fuerte,
-      articulada, escuchada que hace propuestas y actúa para mejorar México.
-    </p>
-  </div>
-
-  <div class="set-12 mb-page">
-    <h3>Manifiesto</h3>
-    <p>
-      Un país donde exista la posibilidad de tener un empleo bien pagado y que nos permita un desarrollo personal y
-      profesional.
-    </p>
-    <p>
-      Queremos tener la seguridad de contar con una buena educación para nuestros hijos y los servicios de salud
-      necesarios para emergencias y nuestro buen desarrollo.
-    </p>
-    <p>
-      Queremos tener nuestra casa, nuestro barrio y nuestra ciudad donde podamos salir a la calle sin temor. Donde las
-      reglas sean claras y la justicia se imparta sin distinción.
-    </p>
-    <p>
-      Donde se elimine la corrupción y las oportunidades sean las mismas independientemente de sexo, religión,etnia y
-      condición social.
-    </p>
-    <p>
-      Un país donde la democracia tenga su pleno desarrollo y todos podamos ser elegidos para puestos públicos. Donde
-      las diferencias entre ricos y pobres cada vez sean menores y el progreso del país se refleje en el progreso de las
-      familias.
-    </p>
-    <p>
-      Donde retomemos nuestras tradiciones y las hagamos parte de nuestra futura cultura. Un país donde el espíritu
-      emprendedor que nos caracteriza sea apoyado.
-    </p>
-    <p>
-      Queremos ser parte de la comunidad internacional y estar a la vanguardia en tecnología y cuidado del
-      medioambiente. Donde crezcamos como personas y dejemos a nuestros hijos un mejor México.
-    </p>
-  </div>
-
-  <div class="set-12 mb-page">
-    <p><strong>Un proyecto de país basado en la Agenda 2030</strong></p>
-    <p>En Mexicolectivo estamos comprometidos con la Agenda 2030. Con el fin de mejorar la vida y el bienestar de todas
-      las personas, reduciendo las desigualdades y contribuyendo a más justicia social y ambiental, la Asamblea General
-      de las Naciones Unidas aprobó en 2015 la Agenda 2030 sobre el Desarrollo Sostenible. Esta hoja de ruta cuenta con
-      17 objetivos generales a su vez están desagregados en objetivos específicos por los países se comprometieron a
-      tomar en cuenta en la elaboración de sus proyectos nacionales y locales de gobierno. Son una guía para el diseño,
-      la implementación y la evaluación de las políticas públicas, de las acciones legislativas y de la impartición de
-      justicia con base en lo siguiente:</p>
-    <ul>
-      <li>Fin de la pobreza</li>
-      <li>Hambre cero</li>
-      <li>Salud y bienestar</li>
-      <li>Educación de calidad</li>
-      <li>Igualdad de género</li>
-      <li>Agua limpia y saneamiento </li>
-      <li>Energía asequible y no contaminante</li>
-      <li>Trabajo decente y crecimiento económico</li>
-      <li>Industria, innovación e infraestructura</li>
-      <li>Reducción de las desigualdades</li>
-      <li>Ciudades y comunidades sostenibles</li>
-      <li>Producción y consumo responsable</li>
-      <li>Acción por el clima</li>
-      <li>Vida submarina</li>
-      <li>Vida de ecosistemas terrestres</li>
-      <li>Paz, justicia e instituciones sólidas</li>
-      <li>Alianzas para lograr los objetivos</li>
-    </ul>
-    <p>Desde 2020 entramos en la “Década para el desarrollo”, es un llamado a redoblar esfuerzos para poder alcanzar las
-      metas e indicadores fijados por las Naciones Unidas en 2030 para un mejor mundo. Contamos con pocos años ya para
-      lograrlo y la situación no está muy prometedora en varios rubros fundamentales. Las desigualdades siguen
-      profundizándose con el aumento de la pobreza multidimensional. Los efectos de la crisis climática son cada vez más
-      frecuentes, cada vez más intensos, con costos mucho más elevados para las personas que menos tienen.</p>
-    <p>Por ello, tenemos la responsabilidad desde cualquier trinchera social, económica o política de intensificar el
-      alineamiento de nuestras acciones colectivas, individuales, públicas o privadas a esos objetivos. La construcción
-      de un nuevo proyecto de país desde la inteligencia colectiva debe basar sus fundamentos y andamiajes sobre la
-      Agenda 2030. </p>
-    <p>La iniciativa Mexicolectivo está comprometida también con esos objetivos y promueve que las propuestas e ideas
-      ciudadanas registradas en la plataforma estén congruentes con ellos. En este sentido, la cooperación internacional
-      para el desarrollo, la vinculación con organismos internacionales y el intercambio de mejores prácticas desde un
-      enfoque de políticas comparadas pueden potenciar esta visión. </p>
-    <p>Para conocer más y seguir las noticias y actualizaciones de la Agenda 2030: <a
-        href="https://www.un.org/sustainabledevelopment/es/" target="_blank">visita aquí</a></p>
-  </div>
-
-  <div class="set-12 mb-page" *ngIf="isMobile">
-    <img src="../../assets/images/andrea-leopardi-N17c03GJGKc-unsplash.png" alt="">
-  </div>
-
-  <mat-card class="set-12 horn">
-    <div class="set-2">
-      <img src="../../assets/images/cover-icon-05.png" alt="">
-    </div>
-    <div class="set-10">
-      <strong>
-        <span>¡Participa! Entra al Pensamiento Colectivo</span>
-      </strong>
-      <button type="button" mat-raised-button color="accent"
-        (click)="linkMe('/documentos-publicos/' + document._id)">Aquí</button>
-    </div>
-  </mat-card> -->
 
   <div class="set-12 footer">
     <div class="app-footer"></div>
