--- a/src/app/components/add-document-testimony/add-document-testimony.component.html
+++ b/src/app/components/add-document-testimony/add-document-testimony.component.html
@@ -3,79 +3,89 @@
     <h3>Agregar Testimonio</h3>
   </div>
   <div class="set-3 txt-right">
-    <button type="button" mat-icon-button color="primary" (click)="killDialog()">
+    <button type="button" mat-mini-fab color="primary" (click)="killDialog()">
       <mat-icon>cancel</mat-icon>
     </button>
   </div>
 </div>
 
 <div class="set-12 dialog-body">
-  <input type="file" #file (change)="onFileSelected($event)" multiple>
-  <button type="button" mat-button color="warn" (click)="visibility()" class="anon">
-    <div class="set-12" *ngIf="!isAnonymous">
-      <mat-icon>visibility</mat-icon>
-      <small>{{user.firstname}} {{user.lastname}}</small>
-    </div>
+  <div class="set-12 publishas">
+    <input type="file" #file (change)="onFileSelected($event)" multiple>
+    <small>Publicar como: </small>
+    <button type="button" mat-button color="warn" (click)="visibility()" class="anon">
+      <div class="set-12" *ngIf="!isAnonymous">
+        <mat-icon>visibility</mat-icon>
+        <small>{{user.firstname}} {{user.lastname}}</small>
+      </div>
 
-    <div class="set-12" *ngIf="isAnonymous">
-      <mat-icon>visibility_off</mat-icon>
-      <small>Anónimo</small>
-    </div>
-  </button>
+      <div class="set-12" *ngIf="isAnonymous">
+        <mat-icon>visibility_off</mat-icon>
+        <small>Anónimo</small>
+      </div>
+    </button>
+  </div>
 
-  <mat-stepper labelPosition="bottom" #stepper [disableRipple]="true" [linear]="true" [@.disabled]="true">
-    <mat-step [stepControl]="addTestimonyFormGroup">
-      <ng-template matStepLabel>
-        <small>Escribe sobre tu experiencia</small>
-      </ng-template>
+  <div class="set-12">
+    <mat-stepper labelPosition="bottom" #stepper [disableRipple]="true" [linear]="true" [@.disabled]="true">
+      <mat-step [stepControl]="addTestimonyFormGroup">
+        <ng-template matStepLabel>
+          <small>Escribe sobre tu experiencia</small>
+        </ng-template>
 
-      <form [formGroup]="addTestimonyFormGroup" class="set-12">
-        <div class="set-12 form-body">
-          <div class="set-12 editor-form">
-            <angular-editor formControlName="description" [config]="editorConfig"></angular-editor>
+        <form [formGroup]="addTestimonyFormGroup" class="set-12">
+          <mat-form-field appearance="outline">
+            <mat-label>Título</mat-label>
+            <input matInput formControlName="name" />
+          </mat-form-field>
+
+          <div class="set-12 form-body">
+            <div class="set-12 editor-form">
+              <angular-editor formControlName="description" [config]="editorConfig"></angular-editor>
+            </div>
+          </div>
+
+          <div class="set-12 ctrls">
+            <button type="button" mat-raised-button color="primary" matStepperNext
+              [disabled]="addTestimonyFormGroup.invalid">
+              <small>Siguiente</small>
+            </button>
+
+            <mat-spinner diameter="30" *ngIf="submitted"></mat-spinner>
+          </div>
+        </form>
+      </mat-step>
+
+      <mat-step>
+        <ng-template matStepLabel>
+          <small>Carga tus imágenes</small>
+        </ng-template>
+
+        <div class="set-12 step-content">
+          <button type="button" class="upload-img" (click)="file.click()">
+            <mat-icon>cloud_upload</mat-icon>
+          </button>
+
+          <div class="set-12 file-hldr">
+            <p *ngFor="let name of fileNames">
+              <small>{{name}}</small>
+            </p>
+          </div>
+
+          <div class="set-12 ctrls">
+            <button type="button" mat-raised-button color="primary" matStepperPrevious [disabled]="submitted">
+              <small>Atras</small>
+            </button>
+
+            <button type="button" mat-raised-button color="accent"
+              [disabled]="addTestimonyFormGroup.invalid || submitted" (click)="createTestimony()">
+              <small>Guardar</small>
+            </button>
+
+            <mat-spinner diameter="20" *ngIf="submitted"></mat-spinner>
           </div>
         </div>
-
-        <div class="set-12 ctrls">
-          <button type="button" mat-raised-button color="primary" matStepperNext
-            [disabled]="addTestimonyFormGroup.invalid">
-            <small>Siguiente</small>
-          </button>
-
-          <mat-spinner diameter="30" *ngIf="submitted"></mat-spinner>
-        </div>
-      </form>
-    </mat-step>
-
-    <mat-step>
-      <ng-template matStepLabel>
-        <small>Carga tus imágenes</small>
-      </ng-template>
-
-      <div class="set-12 step-content">
-        <button type="button" class="upload-img" (click)="file.click()">
-          <mat-icon>cloud_upload</mat-icon>
-        </button>
-
-        <div class="set-12 file-hldr">
-          <p *ngFor="let name of fileNames">
-            <small>{{name}}</small>
-          </p>
-        </div>
-
-        <div class="set-12 ctrls">
-          <button type="button" mat-raised-button color="primary" matStepperPrevious [disabled]="submitted">
-            <small>Atras</small>
-          </button>
-
-          <button type="button" mat-raised-button color="accent" [disabled]="addTestimonyFormGroup.invalid || submitted"
-            (click)="createTestimony()">
-            <small>Guardar</small>
-          </button>
-
-          <mat-spinner diameter="20" *ngIf="submitted"></mat-spinner>
-        </div>
-      </div>
-    </mat-step>
-  </mat-stepper>
+      </mat-step>
+    </mat-stepper>
+  </div>
 </div>
