--- a/src/app/components/app-pagelet/app-pagelet.component.scss
+++ b/src/app/components/app-pagelet/app-pagelet.component.scss
@@ -58,7 +58,7 @@
 
     .sep {
       font-size: 20pt;
-      padding: 0 20px;
+      margin-left: 20px;
       color: #71f5ad;
     }
 
@@ -96,7 +96,7 @@
       border-radius: 100%;
       overflow: hidden;
       background: #1e7e7f;
-      margin-left: 0 !important;
+      margin-left: 20px !important;
       border: 1px solid rgba($color: #000000, $alpha: 0.1);
 
       span {
