--- a/src/app/components/testimony-dialog/testimony-dialog.component.html
+++ b/src/app/components/testimony-dialog/testimony-dialog.component.html
@@ -13,10 +13,11 @@
 <div class="set-12 dialog-body">
   <div class="set-12 publishas">
     <small>Publicar como:</small>
-    <button type="button" mat-button color="warn" (click)="visibility()" class="anon">
+    <button type="button" mat-button color="warn" (click)="visibility()" class="anon" [disabled]="user == null">
       <div class="set-12" *ngIf="!isAnonymous">
         <mat-icon>visibility</mat-icon>
-        <small>{{user.firstname}} {{user.lastname}}</small>
+        <small *ngIf="user != null">{{user.firstname}} {{user.lastname}}</small>
+        <small *ngIf="user == null">Anónimo</small>
       </div>
       <div class="set-12" *ngIf="isAnonymous">
         <mat-icon>visibility_off</mat-icon>
