--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -43,20 +43,24 @@
           animation-duration: 1s;
           animation-fill-mode: both;
         }
+
+        button {
+          margin: 30px 0;
+        }
       }
     }
 
-    .set-4 {
+    .set-3 {
       padding-left: 40px;
 
       button {
         width: 100%;
         padding: 10px 30px;
         background: #09f19e;
-        font-size: 20pt;
+        font-size: 17pt;
         border-radius: 10px;
         font-weight: bold;
-        text-align: left;
+        text-align: center;
       }
     }
   }
@@ -150,7 +154,7 @@
         padding: 0 20px;
       }
 
-      .set-4 {
+      .set-3 {
         width: 100% !important;
         padding: 20px;
       }
