--- a/src/app/hub/sign-up/sign-up.component.html
+++ b/src/app/hub/sign-up/sign-up.component.html
@@ -1,93 +1,98 @@
-<div class="form-hldr">
-  <h1>¡Hola!</h1>
-  <h4>Necesitas una cuenta para ingresar.</h4>
-
-  <form [formGroup]="signUpFormGroup" (submit)="onSignUp(signUpFormGroup)">
-    <div class="set-6">
-      <mat-form-field appearance="outline">
-        <mat-label>Nombre(s)</mat-label>
-        <input matInput type="text" autocomplete="off" formControlName="firstname">
-      </mat-form-field>
-    </div>
-
-    <div class="set-6">
-      <mat-form-field appearance="outline">
-        <mat-label>Apellido(s)</mat-label>
-        <input matInput type="text" autocomplete="off" formControlName="lastname">
-      </mat-form-field>
-    </div>
-
-    <div class="set-6">
-      <mat-form-field appearance="outline">
-        <mat-label>Correo electrónico</mat-label>
-        <input matInput type="text" autocomplete="off" formControlName="email">
-        <mat-hint>** Ej: nombre@dominio.com</mat-hint>
-      </mat-form-field>
-    </div>
-
-    <div class="set-6">
-      <mat-form-field appearance="outline">
-        <mat-label>Contraseña</mat-label>
-        <input matInput [type]="hide ? 'password' : 'text'" autocomplete="off" formControlName="password">
-        <button type="button" matSuffix (click)="hide = !hide">
-          <mat-icon color="primary">
-            {{ hide ? 'visibility_off' : 'visibility' }}
-          </mat-icon>
-        </button>
-        <mat-hint>** 9 carateres minimo.</mat-hint>
-      </mat-form-field>
-    </div>
-
-    <div class="set-6">
-      <mat-form-field appearance="outline">
-        <mat-label>Teléfono</mat-label>
-        <input matInput type="text" autocomplete="off" formControlName="phone">
-      </mat-form-field>
-    </div>
-
-    <div class="set-6">
-      <mat-form-field appearance="outline">
-        <mat-label>Código postal</mat-label>
-        <input matInput type="text" autocomplete="off" formControlName="zipcode">
-      </mat-form-field>
-    </div>
-
-    <div class="set-12 legals">
-      <p>
-        <small>He leído y estoy de acuerdo con:</small>
-      </p>
-      <div class="set-12 row">
-        <mat-checkbox color="primary" formControlName="terms"></mat-checkbox>
-        <a href="#" routerLink="/legales/terminos-condiciones">
-          <small>Términos y condiciones</small>
-        </a>
-      </div>
-      <div class="set-12 row">
-        <mat-checkbox color="primary" formControlName="privacy"></mat-checkbox>
-        <a href="#" routerLink="/legales/politica-privacidad">
-          <small>Política de privacidad</small>
-        </a>
-      </div>
-      <div class="set-12 activation-legend">
-        <p>
-          <small>
-            Al hacer <strong>click</strong> en <strong>"Registrarme"</strong>, te envíaremos un correo de activación. **
-          </small>
-        </p>
-      </div>
-    </div>
-
-    <div class="set-12 form-ctrls">
-      <div class="set-6">
-        <small>¿Ya tienes cuenta? <a href="#" routerLink="/hub/ingresar">Ingresar</a></small>
-      </div>
-      <div class="set-6 txt-right">
-        <button type="submit" mat-raised-button color="primary" [disabled]="signUpFormGroup.invalid || submitted">
-          <small>Registrarme</small>
-        </button>
-      </div>
-    </div>
-  </form>
+<div class="set-12 loading" *ngIf="!isDataAvailable">
+  <mat-spinner></mat-spinner>
 </div>
 
-<!-- <div class="cover"></div> -->
+<div class="set-12" *ngIf="isDataAvailable">
+  <div class="form-hldr">
+    <h1>¡Hola!</h1>
+    <h4>Necesitas una cuenta para ingresar.</h4>
+
+    <form [formGroup]="signUpFormGroup" (submit)="onSignUp(signUpFormGroup)">
+      <div class="set-6">
+        <mat-form-field appearance="outline">
+          <mat-label>Nombre(s)</mat-label>
+          <input matInput type="text" autocomplete="off" formControlName="firstname">
+        </mat-form-field>
+      </div>
+
+      <div class="set-6">
+        <mat-form-field appearance="outline">
+          <mat-label>Apellido(s)</mat-label>
+          <input matInput type="text" autocomplete="off" formControlName="lastname">
+        </mat-form-field>
+      </div>
+
+      <div class="set-6">
+        <mat-form-field appearance="outline">
+          <mat-label>Correo electrónico</mat-label>
+          <input matInput type="text" autocomplete="off" formControlName="email">
+          <mat-hint>** Ej: nombre@dominio.com</mat-hint>
+        </mat-form-field>
+      </div>
+
+      <div class="set-6">
+        <mat-form-field appearance="outline">
+          <mat-label>Contraseña</mat-label>
+          <input matInput [type]="hide ? 'password' : 'text'" autocomplete="off" formControlName="password">
+          <button type="button" matSuffix (click)="hide = !hide">
+            <mat-icon color="primary">
+              {{ hide ? 'visibility_off' : 'visibility' }}
+            </mat-icon>
+          </button>
+          <mat-hint>** 9 carateres minimo.</mat-hint>
+        </mat-form-field>
+      </div>
+
+      <div class="set-6">
+        <mat-form-field appearance="outline">
+          <mat-label>Teléfono</mat-label>
+          <input matInput type="text" autocomplete="off" formControlName="phone">
+        </mat-form-field>
+      </div>
+
+      <div class="set-6">
+        <mat-form-field appearance="outline">
+          <mat-label>Código postal</mat-label>
+          <input matInput type="text" autocomplete="off" formControlName="zipcode">
+        </mat-form-field>
+      </div>
+
+      <div class="set-12 legals">
+        <p>
+          <small>He leído y estoy de acuerdo con:</small>
+        </p>
+        <div class="set-12 row">
+          <mat-checkbox color="primary" formControlName="terms"></mat-checkbox>
+          <a href="#" routerLink="/legales/terminos-condiciones">
+            <small>Términos y condiciones</small>
+          </a>
+        </div>
+        <div class="set-12 row">
+          <mat-checkbox color="primary" formControlName="privacy"></mat-checkbox>
+          <a href="#" routerLink="/legales/politica-privacidad">
+            <small>Política de privacidad</small>
+          </a>
+        </div>
+        <div class="set-12 activation-legend">
+          <p>
+            <small>
+              Al hacer <strong>click</strong> en <strong>"Registrarme"</strong>, te envíaremos un correo de activación.
+              **
+            </small>
+          </p>
+        </div>
+      </div>
+
+      <div class="set-12 form-ctrls">
+        <div class="set-6">
+          <small>¿Ya tienes cuenta? <a href="#" routerLink="/hub/ingresar">Ingresar</a></small>
+        </div>
+        <div class="set-6 txt-right">
+          <button type="submit" mat-raised-button color="primary" [disabled]="signUpFormGroup.invalid || submitted">
+            <small>Registrarme</small>
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
