--- a/src/app/hub/sign-up/sign-up.component.scss
+++ b/src/app/hub/sign-up/sign-up.component.scss
@@ -67,4 +67,13 @@
     margin: 10px 0;
     font-style: italic;
   }
+
+  .loading {
+    mat-spinner {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
 }
