--- a/src/app/legal/privacy/privacy.component.scss
+++ b/src/app/legal/privacy/privacy.component.scss
@@ -11,12 +11,6 @@
     margin: 0 20% 0 20%;
     flex: 1 0 auto;
     padding: 120px 0 40px 0;
-
-    &.fixmob {
-      width: 100%;
-      margin: 0 0 40px 0 !important;
-      padding: 40px 20px 0 20px;
-    }
   }
 
   p {
@@ -36,7 +30,22 @@
     }
   }
 
-  .app-footer {
+  .foot {
     flex-shrink: 0;
+  }
+
+  .loading {
+    mat-spinner {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  .fixmob {
+    width: 100% !important;
+    margin: 0 0 40px 0 !important;
+    padding: 20px 20px 0 20px;
   }
 }
