--- a/src/app/legal/terms/terms.component.scss
+++ b/src/app/legal/terms/terms.component.scss
@@ -2,7 +2,6 @@
   width: 100%;
   height: 100%;
   float: left;
-  // padding: 20px;
   display: flex;
   flex-direction: column;
 
@@ -12,12 +11,6 @@
     margin: 0 20% 40px 20%;
     flex: 1 0 auto;
     padding: 120px 0 0 0;
-
-    &.fixmob {
-      width: 100%;
-      margin: 0 0 40px 0 !important;
-      padding: 40px 20px 0 20px;
-    }
   }
 
   p {
@@ -29,7 +22,22 @@
     margin-bottom: 0;
   }
 
-  .app-footer {
+  .foot {
     flex-shrink: 0;
+  }
+
+  .loading {
+    mat-spinner {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  .fixmob {
+    width: 100%;
+    margin: 0 0 40px 0 !important;
+    padding: 20px 20px 0 20px;
   }
 }
