--- a/src/app/search-results/search-results.component.scss
+++ b/src/app/search-results/search-results.component.scss
@@ -40,6 +40,7 @@
 
       button {
         font-size: 11pt;
+        text-align: left;
         transition: all 0.2s linear;
         text-decoration: underline;
       }
